-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.12.0
-
None
-
-
a18c59faca243015a1c06f82a6e52eb64c205568 (qt-creator/qt-creator/4.12)
-
2020wk18
After upgrading the "Always use" check box does not alter the behavior.
- is duplicated by
-
QTCREATORBUG-23952 Creator 4.12 Save Run Device
-
- Closed
-
-
QTCREATORBUG-23748 Qt Creator doesn't remember default deploy Android device
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-23918 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 299029,2 | Andriod: fix "always use this device" button not working | 4.12 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |