Andriod: fix "always use this device" button not working

Fixes: QTCREATORBUG-23918
Change-Id: Ib9fa5bf0417f7fe028ec357b06d71577fa44c971
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>